# playground

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  billy.db  pyproject.toml  setup.sh  ttd.md
adk-agent-pocs/: .env.example  .gitignore  README.md  a2ui_schema.json  billy.db  demo_questions.txt  pyproject.toml  skills-lock.json  va_agents_README.md
adk-agent-pocs/a2ui_mcp/: README.md  SPEC.md  a2ui_schema.py  agent.py  app.py  gemini-a2ui.txt
adk-agent-pocs/a2ui_mcp/prompts/: root_agent.txt  summarizer.txt
adk-agent-pocs/a2ui_mcp/web_client/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
adk-agent-pocs/agent_gateway/: __init__.py  a2ui_parser.py  main.py  pyproject.toml  registry.py  session_manager.py
adk-agent-pocs/agents/billy_assistant/: CLAUDE.md  Makefile  README.md  SPEC.md  __init__.py  agent.py  app.py  temp.txt
adk-agent-pocs/agents/billy_support/: __init__.py  agent.py
adk-agent-pocs/agents/native_skill_mcp/: README.md  SPEC.md  __init__.py  agent.py  prompts  skills  skills.py  state.py  tools.py
adk-agent-pocs/agents/simple_router/: CLAUDE.md  EVAL_GAPS.md  FACT_HISTORY_SPEC.md  Makefile  README.md  SPEC.md  SPEC_context_prefetch.md  SPEC_expert_thinking.md  SPEC_invoice_fact_object.md  __init__.py  _facts_callbacks.py  _history.py  agent.py  callbacks.py  demo.txt  expert_registry.py  fact-lifecycle-change-spec.md  follow_up_detection.py  oos_detection.py  routing.py  temp.txt
adk-agent-pocs/agents/skill_assistant_mcp/: README.md  SPEC.md  __init__.py  agent.py  app.py  pyproject.toml
adk-agent-pocs/mcp_servers/billy/: billy.db  pyproject.toml  reset_db.py
adk-agent-pocs/scripts/: debug_fast_multi.sh  reset_billy_db.sh  run_a2ui.sh  run_a2ui_web_client.sh  run_agent_gateway.sh  run_billy_api.sh  run_billy_assistant.sh  run_fast_multi.sh  run_hello.sh  run_langgraph_billy.sh  run_mcp_billy.sh  run_simple_router.sh  run_web.sh  run_web_client.sh  run_wine.sh  run_wine_multi.sh
adk-agent-pocs/shared/guardrails/: __init__.py  domain_wine.py  make_google_search_grounding_validator.py
adk-agent-pocs/shared/tools/: __init__.py  billy_toolset.py  chain_callbacks.py  compact_contract_from_pydantic.py  dynamic_skill_tools.py  history_pruning.py  live_audio_patch.py  tool_response_utils.py
adk-agent-pocs/web_client/: README.md  config.json  server.py
adk-agent-pocs/web_client/static/: index.html
hc-rag-agent/: .env.example  Makefile  main.py  pyproject.toml
hc-rag-agent/clients/: llm.py
hc-rag-agent/core/: config.py  observability.py
hc-rag-agent/evals/: __init__.py
hc-rag-agent/evals/graders/: __init__.py  baseline.py  hitl.py  llm_judge.py
hc-rag-agent/evals/harnesses/: regression.py
hc-rag-agent/evals/metrics/: __init__.py  _shared.py  reranker.py
hc-rag-agent/evals/utils/: loaders.py  models.py  settings.py
hc-rag-agent/guardrails/: prompt_injection.py
hc-rag-agent/ingest/: run_ingest.py
hc-rag-agent/orchestrator/: __init__.py  history.py  pipeline_failure.py
hc-rag-agent/orchestrator/langgraph/: chains.py  routing.py  utils.py
hc-rag-agent/orchestrator/memory/: __init__.py
hc-rag-agent/rag/datastore/: duckdb.py  factory.py
hc-rag-agent/rag/embedding/: bridge.py
hc-rag-agent/rag/ingestion/: __init__.py
hc-rag-agent/rag/preprocessing/: base.py  faq_csv.py  ingestion.py  loaders.py
hc-rag-agent/rag/retrieval/: cache.py  ensemble.py  pipeline.py  scoring.py  snippet.py
hc-rag-agent/rag/tools/: base.py
mcp_servers/clara/: .env.example  pyproject.toml
mcp_servers/clara/app/: client.py  common.py  config.py  main_noauth.py
research_agent/: .gitignore  pyproject.toml
research_agent/obsidian/: README.md
research_agent/obsidian/_templates/: note.md
research_agent/src/: paths.py
research_agent/src/research_agent/: __init__.py  __main__.py  agent.py  chunker.py  extractor.py  models.py  prompts.py  writer.py
research_agent/tests/: test_agent.py  test_chunker.py  test_extractor.py  test_models.py  test_writer.py
va-eval-base/: README.md  __init__.py  cli.py  graders.py  harness.py  metrics.py  models.py  pyproject.toml  runner.py  test_smoke.py
va-google-adk/: .env.example  Makefile  agent.py  app.py  artefact_store.py  memory.py  observability.py  pyproject.toml
va-google-adk/agents/va_assistant/: agent.py  app.py
va-google-adk/gateway/: main.py  session_manager.py
va-google-adk/prompts/: banking_agent.txt  invoice_agent.txt  product_agent.txt  quote_agent.txt  router_tried_agents.txt  va_assistant.txt
va-google-adk/shared/: artefact_store.py  memory.py  model_factory.py  runtime_protocol.py  schema.py
va-google-adk/shared/tools/: emails.py  invitations.py  products.py  quotes.py  support_knowledge.py
va-google-adk/sub_agents/: accounting_agent.py  banking_agent.py  customer_agent.py  email_agent.py  expense_agent.py  insights_agent.py  invitation_agent.py  invoice_agent.py  product_agent.py  quote_agent.py  shared_tools.py  support_agent.py
va-google-adk/tests/: test_agent.py  test_bedrock_agent.py  test_custom_rag_agent.py  test_guardrails.py  test_hybrid_agent.py  test_tools.py
va-langgraph/: .env.example  Makefile  memory.py  model_factory.py  observability.py  pyproject.toml  schema.py
va-langgraph/eval/: DATA.md  __init__.py  models.py  runner.py
va-langgraph/eval/graders/: __init__.py  friction_grader.py  llm_judge.py  (+5 more)
va-langgraph/gateway/: main.py  runner.py
va-langgraph/graph/: __init__.py  builder.py  state.py
va-langgraph/prompts/: accounting.txt  banking.txt  customer.txt  direct.txt  email.txt  expense.txt  format.txt  insights.txt  invitation.txt  invoice.txt  memory_extract.txt  product.txt  quote.txt  router.txt  support.txt
va-langgraph/shared/: artefact_store.py  model_factory.py  schema.py
va-langgraph/tests/: test_builder.py  test_guardrail.py  test_routing.py
visualizer/: .gitignore  CLAUDE.md  config.yaml  pyproject.toml
visualizer/agent/: image_fetcher.py  intake.py  main.py  outline.py  renderer.py  slide_writer.py  viz_classifier.py
(+1433 files in other folders)
