[project]
name = "billy-va"
version = "0.1.0"
description = "Billy virtual assistant — Google ADK and LangGraph implementations"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
