[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "va_eval_base"
version = "0.1.0"
description = "Shared eval harness for all VA services (va-google-adk, va-langgraph, va-support-rag)"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "structlog>=25.0.0",
    "click>=8.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
