[project]
name = "clara-mcp-server"
version = "0.1.0"
description = "Clara — sevdesk MCP server, mirrors Billy tool surface against the real sevdesk API"
requires-python = "==3.12.*"
dependencies = [
    "boto3>=1.35.0",
    "fastmcp>=2.13.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "pytest-mock>=3.14.0"]

[project.scripts]
clara = "app.main_noauth:run_server"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
